# voice-genie

./: README.md  app.py  assistant.py  command_processor.py  pyproject.toml  requirements.txt
