[project]
name = "voice-genie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai==0.28",
    "pyaudio>=0.2.14",
    "pyjokes>=0.8.3",
    "pyttsx3>=2.98",
    "requests>=2.32.3",
    "speechrecognition>=3.14.2",
    "wolframalpha>=5.1.3",
]
